Fix slideshows and add images into navbar for logo. Want to make text dissapear when screen width gets too small

--- a/assets/css/blocks.css
+++ b/assets/css/blocks.css
@@ -238,6 +238,8 @@ To be used in conjunction with other block classes*/
 .nav-bar > a {
 	text-decoration: none;
 	color: inherit;
+	display: flex;
+	flex-direction: row;
 }
 
 .nav-bar .a-wrapper {
@@ -276,6 +278,13 @@ To be used in conjunction with other block classes*/
 
 .nav-bar button img {
 	height: 100%;
+}
+
+.nav-bar a img {
+	height: 75px;
+	margin-top: auto;
+	margin-bottom: auto;
+	float: left;
 }
 
 /*
